# RP3-MedicineAgent

./: .env.example  .gitignore  Makefile  README.md  chat.py  pyproject.toml  run.py
medicineagent/: orchestrator.py
medicineagent/agents/: expert.py  general.py
medicineagent/engine/: linkupso.py  llamacpp.py  openrouter.py  slm_caller.py
medicineagent/memory/: chat_history_2026-02-02 23:58:51.json  chat_history_2026-02-03 00:08:26.json
medicineagent/prompts/: general.py
medicineagent/rag/: retrieval.py
resources/: git-basics.md  pkg.md
scripts/: chat.py  download_model.py  run_server.py  setup.sh  test_openrouter.py
src/: settings.py
src/agents/: expert.py  general.py
src/app/: __init__.py  memory.py  orchastrator.py  orchestrator.py
src/app/history/: chat_history_2026-02-02 00:55:32.json
src/engine/: linkupso.py  llamacpp.py  openrouter.py  slm_caller.py
src/prompts/: general.py
src/rag/: database.py  retrieval.py
