[project]
name = "rp3-medicineagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.3.1",
    "linkup-sdk>=0.9.0",
    "llama-cpp-python>=0.3.16",
    "nanoserver>=0.1.0",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "structlog>=25.5.0",
]
